--- a/app/src/main/res/layout/fragment_add_gratitude.xml
+++ b/app/src/main/res/layout/fragment_add_gratitude.xml
@@ -22,32 +22,21 @@
                 android:id="@+id/positive_emotion_description_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="36dp"
-                android:layout_marginEnd="24dp"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/what_make_grateful_layout">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:gravity="top|start"
-                    android:inputType="textMultiLine"
-                    android:lines="3"
                     android:id="@+id/why_value"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:hint="@string/describe_your_positive_emotion" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/what_make_grateful_layout"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/add_gratitude_spinner_layout">
 
@@ -55,6 +44,7 @@
                     android:id="@+id/what_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:lines="1"
                     android:hint="@string/what_made_grateful"
                     android:textColorHint="@android:color/darker_gray" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -65,8 +55,6 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="48dp"
-                android:layout_marginStart="24dp"
                 app:strokeColor="@color/black"
                 app:strokeWidth=".55dp">
                 <Spinner
