--- a/app/src/main/res/layout/fragment_edit_positive_emotion.xml
+++ b/app/src/main/res/layout/fragment_edit_positive_emotion.xml
@@ -8,46 +8,49 @@
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".editpositiveemotion.EditPositiveEmotion">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/edit_positive_emotion_title_layout"
+        android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="24dp"
-            android:hint="@string/title">
+            tools:context=".editpositiveemotion.EditPositiveEmotion">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_positive_emotion_title_value"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/edit_positive_emotion_title_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_margin="24dp"
+                android:hint="@string/title">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/edit_positive_emotion_description_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edit_positive_emotion_title_layout"
-            android:layout_margin="24dp"
-            android:hint="@string/description">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_positive_emotion_title_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_positive_emotion_description_value"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/edit_positive_emotion_description_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:lines="4"
-                android:gravity="top|start"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edit_positive_emotion_title_layout"
+                android:layout_margin="24dp"
+                android:hint="@string/description">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_positive_emotion_description_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="top|start"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
