--- a/app/src/main/res/layout/fragment_tope_help.xml
+++ b/app/src/main/res/layout/fragment_tope_help.xml
@@ -14,8 +14,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="48dp"
-                android:paddingHorizontal="24dp"
+                android:padding="24dp"
                 android:text="@{companionObject.positiveEmotionDescription}"
                 android:textSize="16sp" />
         </ScrollView>
