--- a/app/src/main/res/layout/positive_emotion_list.xml
+++ b/app/src/main/res/layout/positive_emotion_list.xml
@@ -10,6 +10,7 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/list_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
@@ -48,7 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_marginBottom="6dp"
-                    penyebab="@{positiveEmotion}"
+                    judul="@{positiveEmotion.what}"
                     android:textSize="18sp"
                     tools:text="Dapat duit dari tuhan"
                     android:scrollbars="horizontal"/>
@@ -56,7 +57,7 @@
 
             <TextView
                 android:id="@+id/tipe"
-                tipe="@{positiveEmotion}"
+                tipe="@{positiveEmotion.type}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
@@ -85,6 +86,18 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/ic_edit" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/favorite_symbol"
+                starVisibility="@{positiveEmotion.isFavorite}"
+                android:layout_width="wrap_content"
+                android:layout_height="18dp"
+                app:layout_constraintBottom_toBottomOf="@id/tipe"
+                app:layout_constraintTop_toTopOf="@id/tipe"
+                app:layout_constraintStart_toEndOf="@id/tipe"
+                android:src="@drawable/ic_baseline_yellow_star"
+                android:layout_marginStart="3dp"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
