--- a/app/src/main/res/layout/fragment_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_filter_dialog.xml
@@ -22,6 +22,23 @@
             android:layout_marginTop="-5dp"
             app:layout_constraintTop_toBottomOf="@id/data_switch_filter_label"
             app:layout_constraintStart_toStartOf="@id/data_switch_filter_label" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:layout_marginTop="-5dp"
+            android:id="@+id/favorite_switch_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/favorite_switch_filter_label"
+            app:layout_constraintTop_toBottomOf="@id/favorite_switch_filter_label" />
+
+        <TextView
+            android:id="@+id/favorite_switch_filter_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:text="Hanya Favorite"
+            app:layout_constraintBottom_toBottomOf="@id/data_switch_filter_label"
+            app:layout_constraintStart_toEndOf="@id/data_switch_filter_label" />
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/month_spinner_layout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
