--- a/app/src/main/res/layout/fragment_edit_positive_emotion.xml
+++ b/app/src/main/res/layout/fragment_edit_positive_emotion.xml
@@ -10,26 +10,26 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_height="wrap_content">
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".editpositiveemotion.EditPositiveEmotion">
+            tools:context=".editpositiveemotion.EditPositiveEmotion"
+            android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_positive_emotion_title_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginHorizontal="24dp"
                 android:hint="@string/title">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_positive_emotion_title_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:textInputLayoutFocusedRectEnabled="false"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -37,9 +37,6 @@
                 android:id="@+id/edit_positive_emotion_description_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/edit_positive_emotion_title_layout"
                 android:layout_margin="24dp"
                 android:hint="@string/description">
 
@@ -48,9 +45,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top|start"
+                    app:textInputLayoutFocusedRectEnabled="false"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
 </layout>
