nambahin skenario untuk ngedit value dan ngasih assersi untuk item di recyclerview

--- a/app/src/main/res/layout/view_holder_main.xml
+++ b/app/src/main/res/layout/view_holder_main.xml
@@ -10,7 +10,7 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/list_card_view"
+        android:id="@+id/gratitude_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
