ngemigrasi tampilan backup dan restore ke jetpack compose

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -48,6 +48,5 @@
     <fragment
         android:id="@+id/backupRestoreFragment"
         android:name="com.example.gratefulnote.backuprestore.BackupRestoreFragment"
-        android:label="Backup and Restore"
-        tools:layout="@layout/fragment_backup_restore" />
+        android:label="Backup and Restore" />
 </navigation>
