nambahkan repository dan manager di daily notification
ngerapiin struktur folder di daily notification
nambahin repository untuk entity daily notification
nambahin notification manager untuk ngebuat transaction pada repository dan nge-set alarm

--- a/app/src/main/res/layout/fragment_notification_settings.xml
+++ b/app/src/main/res/layout/fragment_notification_settings.xml
@@ -6,13 +6,13 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.gratefulnote.notification.NotificationViewModel" />
+            type="com.example.gratefulnote.daily_notification.NotificationViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".notification.NotificationSettingsFragment">
+        tools:context=".daily_notification.NotificationSettingsFragment">
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/switch_notification"
