--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -42,7 +42,7 @@
     </fragment>
     <fragment
         android:id="@+id/notificationSettingsFragment"
-        android:name="com.example.gratefulnote.notification.NotificationSettingsFragment"
+        android:name="com.example.gratefulnote.daily_notification.NotificationSettingsFragment"
         android:label="Notification Settings"
         tools:layout="@layout/fragment_notification_settings"/>
     <fragment
