--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -42,9 +42,8 @@
     </fragment>
     <fragment
         android:id="@+id/notificationSettingsFragment"
-        android:name="com.example.gratefulnote.daily_notification.NotificationSettingsFragment"
-        android:label="Notification Settings"
-        tools:layout="@layout/fragment_notification_settings"/>
+        android:name="com.example.gratefulnote.daily_notification.presentation.DailyNotificationFragment"
+        android:label="Notification Settings" />
     <fragment
         android:id="@+id/backupRestoreFragment"
         android:name="com.example.gratefulnote.backuprestore.presentation.main_screen.MainScreenViewFragment"
