ngerefactor view model di edit dan add gratitude supaya enggak ngeandalen android view model

--- a/app/src/main/res/layout/fragment_edit_positive_emotion.xml
+++ b/app/src/main/res/layout/fragment_edit_positive_emotion.xml
@@ -14,7 +14,7 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".editpositiveemotion.EditPositiveEmotion"
+            tools:context=".editpositiveemotion.EditPositiveEmotionFragment"
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
