--- a/app/src/main/res/layout/fragment_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_filter_dialog.xml
@@ -7,7 +7,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/data_switch_filter_label"
+            android:id="@+id/terbaru_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -16,16 +16,16 @@
             android:layout_marginTop="16dp"
             android:text="@string/date_switch_filter_label"/>
         <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/date_switch_filter"
+            android:id="@+id/is_sorted_latest_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="-5dp"
-            app:layout_constraintTop_toBottomOf="@id/data_switch_filter_label"
-            app:layout_constraintStart_toStartOf="@id/data_switch_filter_label" />
+            app:layout_constraintTop_toBottomOf="@id/terbaru_label"
+            app:layout_constraintStart_toStartOf="@id/terbaru_label" />
 
         <androidx.appcompat.widget.SwitchCompat
             android:layout_marginTop="-5dp"
-            android:id="@+id/favorite_switch_filter"
+            android:id="@+id/is_only_favorite_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@+id/favorite_switch_filter_label"
@@ -37,15 +37,15 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
             android:text="Hanya Favorite"
-            app:layout_constraintBottom_toBottomOf="@id/data_switch_filter_label"
-            app:layout_constraintStart_toEndOf="@id/data_switch_filter_label" />
+            app:layout_constraintBottom_toBottomOf="@id/terbaru_label"
+            app:layout_constraintStart_toEndOf="@id/terbaru_label" />
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/month_spinner_layout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/date_switch_filter"
-            app:layout_constraintTop_toBottomOf="@id/date_switch_filter"
+            app:layout_constraintStart_toStartOf="@id/is_sorted_latest_switch"
+            app:layout_constraintTop_toBottomOf="@id/is_sorted_latest_switch"
             android:layout_marginTop="24dp"
             android:hint="@string/bulan"
             android:labelFor="@id/month_spinner">
