--- a/app/src/main/res/menu/menu_main_options_menu.xml
+++ b/app/src/main/res/menu/menu_main_options_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/recycler_view_filter"
-        android:title="@string/filter"
+        android:title="@string/filter_dialog_title"
         android:icon="@drawable/ic_baseline_filter"
         app:showAsAction="ifRoom"
         />
