test: nyoba eksperimen cucumber sekali lagi
refactor: ngebuat ResponseWrapper agar lebih strict dengan nullable (kalau tipe data nullable, maka harus di eksplisitkan).

refactor: return Unit instead of null untuk konsistensi

refactor: buat agar pas ngeload diary details, hanya ngegunain ID dari diary

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -33,8 +33,8 @@
             android:label="@string/edit"
             tools:layout="@layout/fragment_edit_diary">
             <argument
-                android:name="currentDiary"
-                app:argType="com.example.gratefulnote.database.Diary" />
+                android:name="diaryId"
+                app:argType="long" />
         </fragment>
         <fragment
             android:id="@+id/addGratetitudeFragment"
