--- a/app/src/main/res/layout/fragment_edit_diary.xml
+++ b/app/src/main/res/layout/fragment_edit_diary.xml
@@ -4,51 +4,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-    </data>
 
-
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".editDiary.EditDiaryFragment"
-            android:orientation="vertical">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/edit_positive_emotion_title_layout"
+        android:layout_height="match_parent">
+        <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginHorizontal="24dp"
-                android:hint="@string/title">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_positive_emotion_title_value"
+                android:layout_height="match_parent"
+                android:id="@+id/edit_field_group">
+            <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:textInputLayoutFocusedRectEnabled="false"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
+                    tools:context=".editDiary.EditDiaryFragment"
+                    android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/edit_positive_emotion_description_layout"
-                android:layout_width="match_parent"
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/edit_positive_emotion_title_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginHorizontal="24dp"
+                        android:hint="@string/title">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_positive_emotion_title_value"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:textInputLayoutFocusedRectEnabled="false"
+                            />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/edit_positive_emotion_description_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="24dp"
+                        android:layout_marginVertical="12dp"
+                        android:hint="@string/description">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_positive_emotion_description_value"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="top|start"
+                            app:textInputLayoutFocusedRectEnabled="false"
+                            />
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </ScrollView>
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:id="@+id/loading_indicator"/>
+
+        <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="24dp"
-                android:hint="@string/description">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_positive_emotion_description_value"
-                    android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:id="@+id/error_group">
+            <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_error_outline_24"/>
+            <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="8dp"/>
+            <TextView
+                    android:id="@+id/error_text"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="top|start"
-                    app:textInputLayoutFocusedRectEnabled="false"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
+                    tools:text="Error : Kesalahan tidak diketahui"/>
+        </LinearLayout>
+    </FrameLayout>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </ScrollView>
 </layout>
